style.css
/*
 Theme Name:   Twenty Fifteen Child
 Theme URI:    http://lyndonfawcett.com/twentyfifteen-child/
 Description:  My first child theme, based on Twenty Fifteen
 Author:       Lyndon Fawcett
 Author URI:   http://lyndonfawcett.com
 Template:     twentyfifteen
 Version:      1.0.0
 Tags:         black, green, white, light, dark, two-columns, three-columns, left-sidebar, right-sidebar, fixed-layout, responsive-layout, custom-background, custom-header, custom-menu, editor-style, featured-images, flexible-header, full-width-template, microformats, post-formats, rtl-language-support, sticky-post, theme-options, translation-ready, accessibility-ready, responsive-layout, infinite-scroll, post-slider, design, food, journal, magazine, news, photography, portfolio, clean, contemporary, dark, elegant, modern, professional, sophisticated
 Text Domain:  twenty-fifteen-child
*/


.sidebar {
                float: left;
                margin-right: -100%;
                max-width: 413px;
                position: relative;
                width: 20%;
}




        body:before {
                background-color: #fff;
                box-shadow: 0 0 1px rgba(0, 0, 0, 0.15);
                content: "";
                display: block;
                height: 100%;
                min-height: 100%;
                position: fixed;
                top: 0;
		background: white;
                left: 0;
                width: 20%;
                z-index: 0; /* Fixes flashing bug with scrolling on Safari */
        }

        .site {
                margin: 0 auto;
                max-width: 1403px;
        }


        .secondary {
                background-color: transparent;
                box-shadow: none;
                display: block;
                margin: 0;
                padding: 0;
        }


	.hentry {
    		padding-top: 4%;
	}

        .site-main {
                padding: 4% 0;
        }

        .site-content {
                display: block;
                float: left;
                margin-left: 20%;
                width: 80%;
        }

        body {
                font-size: 15px;
                font-size: 1.5rem;
                line-height: 1.6;
        }





p.site-title, h2, h3, h4, h5, h6 {
	font-weight: 700;
}


h1.page-title {
	font-weight: 500;
}

h1.entry-title {

	font-weight: 700;
}


h2.widget-title{
	font-weight: 700;

}

#site-main {


}

#footer-sidebar {
        padding: 0em;
}


.site-footer {
    float: left;
    margin: 0 0 0 26.5%;
    padding: 0;
    width: 67%;
}



#main { padding-top: 2; }

.sidebar .widget {
margin-bottom: 50px;
margin-right: 2px;

}


.hentry, .page-header, .page-content {
	margin:4%;
}

.entry-content, .entry-summary, .entry-header {
    padding: 0 5% 5%;
}

.entry-header {
    padding: 0 5% 0%;
}

